# Map

./: .dockerignore  .env.example  .gitignore  Dockerfile  MATHEMATICAL_SUPPORT.txt  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci-cd.yml
deploy/nginx/: map.conf
deploy/scripts/: stage0-bootstrap.sh  stage1-bootstrap.sh  stage2-bootstrap.sh  stage3-bootstrap.sh  stage4-bootstrap.sh
docker/: entrypoint.sh
docs/: API_REFERENCE.md  COMPONENTS_README.md  DEPLOYMENT.md  DEVELOPMENT_GUIDE.md  USER_GUIDE.md  component_diagram.puml
front/: forms.py  views.py
front/templates/: admin.html  admin_login.html  base.html  evac_plans.html  faq.html  login.html  main.html  register.html  tour_editor.html  tour_view.html  user_edit.html  users_list.html
front/templatetags/: nav_tags.py
front/tests/: test_forms.py  test_nav_tags.py  test_views.py
map_api/: admin.py  admin_log.py  jwt.py  models.py  permissions.py  route_graph.py  serializers.py  tests.py  urls.py  utils.py  views.py
map_api/migrations/: 0001_initial.py  0002_add_floor_type_infotext_label.py  0003_panoramainfopoint.py  0004_merge_20260208_1516.py  0005_remove_mappoint_type_panoramamarker_type_and_more.py  0006_delete_panoramainfopoint.py  0007_alter_panoramamarker_target_point.py  0008_panoramamarker_text_and_checks.py  0009_alter_mappoint_info_text.py  0010_tour_and_tourmarker.py  0011_tourinfomarkerview.py  0012_registration_code_word.py  0013_facility_and_evacplan_facility.py  0014_panoramamarker_entry_azimuth.py  0015_evacplan_start_point.py  0016_evacplan_is_active.py
map_api/tests/: test_evac_plan_route.py  test_evac_plan_start_point.py  test_evac_plan_visibility.py  test_facility_route.py  test_jwt.py  test_panorama_viewset.py  test_route_graph.py  test_serializers_and_misc.py  test_tour_mark_viewed.py  test_tour_route_hint.py  test_user_viewset.py  (+2 more)
map_core/: asgi.py  auth_backends.py  config.py  settings.py  storage.py  urls.py  wsgi.py
(+19 files in other folders)
