[tool.poetry]
name = "map"
version = "0.1.0"
description = ""
authors = ["GMCS\\abedin <'abedin@gmcs.ru'>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.4"
djangorestframework = "^3.16.0"
djangorestframework-simplejwt = "^5.5.0"
whitenoise = "^6.9.0"
django-cors-headers = "^4.7.0"
django-fernet-encrypted-fields = "^0.3.0"
drf-spectacular = "^0.28.0"
psycopg2 = "^2.9.10"
django-filter = "^25.1"
pillow = "^11.3.0"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
